# PAYMELAH

./: .gitignore  README.md  database.py  main.py  ocr.py  pyproject.toml
