[tool.poetry]
name = "paymelah"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.10"
consultor = "^0.2.0"
telebot = "^0.0.4"
pyTelegramBotAPI = "^4.2.2"
opencv-python = "^4.5.5"
pytesseract = "^0.3.8"
tesseract-pk = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
